--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "myexpress",
+  "name": "myExpress",
   "version": "1.0.0",
   "description": "Express TypeScript",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "tsc": "tsc"
+    "build": "tsc app.ts",
+    "start": "node app.js",
+    "dev": "ts-node app.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MaximeG2018/myExpress.git"
-  },
-  "author": "maxime gouénard",
+  "author": "Maxime G",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MaximeG2018/myExpress/issues"
-  },
-  "homepage": "https://github.com/MaximeG2018/myExpress#readme",
+  "dependencies": {},
   "devDependencies": {
-    "tslint": "^5.20.0",
+    "@types/node": "^12.11.1",
+    "ts-node": "^8.4.1",
+    "tsc": "^1.20150623.0",
     "typescript": "^3.6.4"
   }
 }
